--- a/app/views/public/souvenirs/search_category.html.erb
+++ b/app/views/public/souvenirs/search_category.html.erb
@@ -1,12 +1,7 @@
 <div class="container">
   <div class="row">
-     <% @souvenirs_food.each do |souvenir| %>
-         <div>
-             <%= souvenir.souvenir_name %>
-         </div>
-     <% end %>
-
-     <% @souvenirs_goods.each do |souvenir| %>
+      
+     <% @souvenirs.each do |souvenir| %>
          <div>
              <%= souvenir.souvenir_name %>
          </div>
