--- a/app/views/public/souvenirs/new.html.erb
+++ b/app/views/public/souvenirs/new.html.erb
@@ -35,7 +35,7 @@
                 <td><%= f.radio_button :category, "food" %>
                     <%= f.label :category_food, "食品" %></br>
                     <%= f.radio_button :category, "goods" %>
-                    <%= f.label :category_godds, "グッズ" %></td>
+                    <%= f.label :category_goods, "グッズ" %></td>
               </tr>
             </tbody>
           </table>
