--- a/app/views/public/reviews/new.html.erb
+++ b/app/views/public/reviews/new.html.erb
@@ -38,15 +38,12 @@
           </tr>
           <tr>
             <th class="text-center align-middle">タグ</th>
-            <td><%= f.label :tag_name, "スペースを入力することで複数のタグをつけることが可能です。" %>
+            <td><%= f.label :tag_name, "半角スペースを入力することで複数のタグをつけることができます。" %>
                 <%= f.text_field :tag_name, placeholder: "お菓子", class: "form-control" %></td>
           </tr>
           <tr>
             <th class="text-center align-middle">相手は？</th>
             <td><%= f.select :people, Review.people.keys.map {|k| [I18n.t("enums.review.people.#{k}"), k]}, {prompt: "選択してください"}, class: "form-control" %></td>
-
-
-
             <td></td>
           </tr>
           <tr>
