--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -43,11 +43,14 @@
               <!--===================タグ機能=============================-->
               <tr>
                 <td class="text-center align-middle">タグ</td>
-                <td><% @review_tags.each do |tag| %>
-                      <span class="badge badge-primary mr-2"><%= link_to tag.tag_name, search_tags_path(tag_name: tag.tag_name), class: "text-light" %>
-                            <%= "(#{ tag.reviews.count })" %>
+                <td class="d-flex flex-wrap">
+                  <% @review_tags.each do |tag| %>
+                    <%= link_to search_tags_path(tag_name: tag.tag_name) do %>
+                      <span class="badge badge-primary text-light mr-2">
+                        <%= tag.tag_name %>  <%= "(#{ tag.reviews.count })" %>
                       </span>
                     <% end %>
+                  <% end %>
                 </td>
               </tr>
               <!--======================================================-->
