--- a/app/views/public/reviews/edit.html.erb
+++ b/app/views/public/reviews/edit.html.erb
@@ -29,7 +29,7 @@
             <td></td>
           </tr>
           <tr>
-            <th class="text-center align-middle">ジャンル</th>
+            <th class="text-center align-middle">タグ</th>
             <td><%= f.label :tag_name, "半角スペースを入力することで複数のタグ付けができます。" %>
                 <%= f.text_field :tag_name, value: @tag_list, class: "form-control" %></td>
           </tr>
