--- a/app/views/admin/reviews/show.html.erb
+++ b/app/views/admin/reviews/show.html.erb
@@ -37,29 +37,50 @@
             <td></td>
           </tr>
           <tr>
+            <th class="text-center align-middle">タグ</th>
+            <td><%= f.label :tag_name, "半角スペースを入力することで複数のタグ付けができます。" %>
+                <%= f.text_field :tag_name, value: @tag_list, class: "form-control" %></td>
+          </tr>
+          <tr>
             <th class="text-center align-middle">貰った？贈った？</th>
             <td class="align-middle"><%= f.radio_button :receive_send, "貰う" %>
                 <%= f.label :receive_send_recive, "貰った", class: "mr-3" %>
                 <%= f.radio_button :receive_send, "贈る" %>
                 <%= f.label :receive_send_send, "贈った" , class: "mr-3" %>
-                <%= f.radio_button :receive_send, "自分用" %>
-                <%= f.label :receive_send_myself, "自分用" %>
             </td>
             <td></td>
           </tr>
           <tr>
             <th class="text-center align-middle">相手は？</th>
-            <td>タグ使用予定</td>
+            <td><%= f.select :people, Review.people_i18n.keys.map {|k| [I18n.t("enums.review.people.#{k}"), k]}, {prompt: "選択してください"}, class: "form-control" %></td>
+            <td></td>
             <td></td>
           </tr>
           <tr>
             <th class="text-center align-middle">目的は？</th>
-            <td>タグ？？？</td>
+            <td><%= f.select :usefulness, Review.usefulnesses_i18n.keys.map {|k| [I18n.t("enums.review.usefulness.#{k}"), k]}, {prompt: "選択してください"}, class: "form-control" %></td>
             <td></td>
           </tr>
           <tr>
             <th class="text-center align-middle">星評価</th>
-            <td>⭐️⭐️⭐️⭐️⭐️</td>
+            <td>
+              <div id="edit-star"></div>
+                <script>
+                  $(document).on('turbolinks:load', function() {
+                    let elem = document.querySelector('#edit-star');
+                    elem.innerHTML = "";
+                    let opt = {
+                      starOn: "<%= asset_path('star-on.png') %>",
+                      starOff: "<%= asset_path('star-off.png') %>",
+                      starHalf: "<%= asset_path('star-half.png') %>",
+                      half: true,
+                      scoreName: 'review[star]',
+                      score: "<%= @review.star %>",
+                    };
+                    window.raty(elem, opt);
+                    });
+                </script>
+            </td>
             <td></td>
           </tr>
           <tr>
@@ -70,15 +91,6 @@
         </tbody>
       </table>
       <% end %>
-
-
-
-
-
-
-
     </div>
-
-
   </div>
 </div>
